<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_authorization"
    tools:context=".presentation.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_tv_title"
        style="@style/authorization_tv_title"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_et_layout_email"
        style="@style/edit_text_layout"
        android:layout_marginTop="64dp"
        android:hint="@string/email_w_column"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_tv_title"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_et_email"
            style="@style/edit_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_et_layout_password"
        style="@style/edit_text_layout"
        android:layout_marginTop="8dp"
        android:hint="@string/password_w_column"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_et_layout_email"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_et_password"
            style="@style/edit_text"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn_login"
        style="@style/authorization_btn"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sign_in_et_layout_password"
        app:layout_constraintStart_toStartOf="@id/sign_in_et_layout_password"
        app:layout_constraintTop_toBottomOf="@id/sign_in_et_layout_password"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/sign_in_progress_indicator"
        style="@style/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_btn_login"
        app:layout_constraintEnd_toEndOf="@id/sign_in_btn_login"
        app:layout_constraintStart_toStartOf="@id/sign_in_btn_login"
        app:layout_constraintTop_toTopOf="@id/sign_in_btn_login"
        tools:background="@color/ui_04"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_tv_question"
        style="@style/authorization_tv_question"
        android:layout_marginBottom="8dp"
        android:text="@string/need_an_account_w_question"
        app:layout_constraintBottom_toTopOf="@id/sign_in_tv_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn_login"
        app:layout_constraintVertical_bias="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_tv_sign_up"
        style="@style/authorization_tv_action_link"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn_login"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>