<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_authorization"
    tools:context=".presentation.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_tv_title"
        style="@style/Login_title"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_et_layout_name"
        style="@style/Login_text_input_layout"
        android:layout_marginTop="64dp"
        android:hint="@string/name_w_column"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_tv_title"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_name"
            style="@style/Login_text_input_edittext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_et_layout_surname"
        style="@style/Login_text_input_layout"
        android:layout_marginTop="8dp"
        android:hint="@string/surname_w_column"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_et_layout_name"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_surname"
            style="@style/Login_text_input_edittext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_et_layout_email"
        style="@style/Login_text_input_layout"
        android:layout_marginTop="8dp"
        android:hint="@string/email_w_column"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_et_layout_surname"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_email"
            style="@style/Login_text_input_edittext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_et_layout_password"
        style="@style/Login_text_input_layout"
        android:layout_marginTop="8dp"
        android:hint="@string/password_w_column"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_et_layout_email"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_password"
            style="@style/Login_text_input_edittext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_login_register"
        android:text="@string/register"
        android:textColor="@color/ui_01"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sign_up_et_layout_password"
        app:layout_constraintStart_toStartOf="@id/sign_up_et_layout_password"
        app:layout_constraintTop_toBottomOf="@id/sign_up_et_layout_password"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/sign_up_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/ui_01"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_btn_register"
        app:layout_constraintEnd_toEndOf="@id/sign_up_btn_register"
        app:layout_constraintStart_toStartOf="@id/sign_up_btn_register"
        app:layout_constraintTop_toTopOf="@id/sign_up_btn_register"
        tools:background="@color/ui_04"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_tv_question"
        style="@style/Login_question"
        android:layout_marginBottom="8dp"
        android:text="@string/already_have_an_account_w_question"
        app:layout_constraintBottom_toTopOf="@id/sign_up_tv_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn_register"
        app:layout_constraintVertical_bias="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_tv_sign_in"
        style="@style/Login_action"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn_register"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>