<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/ui_01"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_user_tv_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_w_column"
            android:textColor="@color/ui_03"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_user_tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/ui_06"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_user_iv_label"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/item_user_barrier"
            app:layout_constraintTop_toTopOf="@id/item_user_tv_name_hint"
            app:layout_constraintVertical_bias="0"
            tools:text="@string/room_w_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_user_tv_surname_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/surname_w_column"
            android:textColor="@color/ui_03"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_user_tv_name_hint"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_user_tv_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/ui_06"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_user_iv_label"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/item_user_barrier"
            app:layout_constraintTop_toTopOf="@id/item_user_tv_surname_hint"
            app:layout_constraintVertical_bias="0"
            tools:text="@string/room_type_w_column" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/item_user_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="end"
            app:constraint_referenced_ids="item_user_tv_name_hint, item_user_tv_surname_hint" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item_user_iv_label"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/iv_admin"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>